#Feat: modify endpoint
- password
-request
-ride
-auth
-user
-index model
-request model
-ride model
-user model
-request route
-ride route
-helpers
-schema validator
-swagger
