# controller/ride.js
@@ -1,60 +1,49 @@
-import db from '../model';
 import { Form } from 'form-my-simple-validation';
+import db from '../model';
 import formSchema from '../validator/schema';
 
 /**
  * @desc Rides
  */
-
 class Rides {
   /**
    * @desc GET ALL RIDES
-   * @param {*} REQUEST
-   * @param {*} RESPONSE
-   * @return {obj} JSON
+   * @param {object} req
+   * @param {object} res
+   * @return {object} JSON
    */
-
   static async getAllRides(req, res) {
     try {
-      const ride = await db.Ride.find({
-        userId: req.user._id,
-      }).sort({ createdAt: 'desc' });
-      if (!ride.rideId.equals(userId)) {
+      const ride = await db.Ride.find({}).sort({ createdAt: 'desc' });
+
+      if (!ride.length) {
         return res
-          .status(400)
+          .status(200)
           .json({ message: 'Opps! sorry no available ride yet' });
       }
-      if (!ride.rideId.equals(userId)) {
-        return res.status(404).json({ message: 'ride does not belong to you' });
-      }
-      return res.status(200).json({ message: 'rides available', ride });
+      return res.status(200).json({ message: 'Successful', ride });
     } catch (err) {
       return res.status(500).json({ error: true, message: err.message });
     }
   }
 
   /**
-   * @desc GET ONE RIDE
-   * @param {*} REQUEST
-   * @param {*} RESPONSE
-   * @return {obj} JSON
+   * @desc GET ONE RIDES
+   * @param {object} req
+   * @param {object} res
+   * @return {object} JSON
    */
-
   static async getOneRide(req, res) {
     try {
       const { rideId } = req.params;
-      const { _id: userId } = req.user;
 
-      const ride = await db.Ride.findOne({ rideId });
-      if (!ride.rideId.equals(userId)) {
+      const ride = await db.Ride.findOne({ _id: rideId });
+      if (!ride) {
         return res
           .status(404)
           .json({ message: 'Ride not found', status: 'failed', found: false });
       }
 
-      if (!ride.rideId.equals(userId)) {
-        return res.status(404).json({ message: 'ride does not belong to you' });
-      }
       return res.status(200).json({
         message: 'One ride found',
         ride,
@@ -67,19 +56,18 @@ class Rides {
   }
 
   /**
-   * @desc CREATING RIDE OFFER
-   * @param {*} REQUEST
-   * @param {*} RESPONSE
-   *  @return {obj} JSON
+   * @desc CREATE RIDES
+   * @param {object} req
+   * @param {object} res
+   * @return {object} JSON
    */
-
   static async createRideOffer(req, res) {
     try {
-      const { userId } = req.user;
+      const { _id: driverId } = req.user;
       const {
         departure,
         destination,
-        driver,
+        message,
         seats,
         time,
         date,
@@ -99,16 +87,11 @@ class Rides {
       if (validationResult.error) {
         return res.status(400).json(validationResult);
       }
-
-      const findRide = await db.Ride.find({ userId });
-      if (!findRide) {
-        return res.status(404).json({ message: 'ride not found' });
-      }
       const createRide = await db.Ride.create({
-        userId: req.user._id,
+        driverId,
         departure,
         destination,
-        driver,
+        message,
         seats,
         time,
         date,
@@ -118,6 +101,30 @@ class Rides {
       return res
         .status(201)
         .json({ message: 'ride is created successfully', data: createRide });
+    } catch (err) {
+      return res.status(500).json({ error: true, message: err.message });
+    }
+  }
+
+  /**
+   * @desc DELETE RIDES OFFERS
+   * @param {object} req
+   * @param {object} res
+   * @return {object} JSON
+   */
+  static async deleteRideOffer(req, res) {
+    try {
+      const { _id: driverId } = req.user;
+      const { rideId } = req.params;
+
+      const ride = await db.Ride.findOne({ driverId, _id: rideId });
+
+      if (!ride) {
+        return res.status(400).json({ message: 'This ride does not belong to you or does not exist' });
+      }
+      await db.Ride.findOneAndDelete({ _id: rideId });
+
+      return res.status(200).json({ message: 'Ride deleted successfully' });
     } catch (err) {
       return res.status(500).json({ error: true, message: err.message });
     }
